# zgrany_budzet

./: package-lock.json  package.json
app/: routes.ts
app/routes/: edit.tsx
client/: package-lock.json  package.json
client/app/: app.css  root.tsx  routes.ts  schema.ts
client/app/components/: budget-grid.tsx  history-modal.tsx  nav-bar.tsx  role-card.tsx
client/app/config/: env.ts
client/app/hooks/: use-field-history.ts  use-grid-data.ts  use-local-storage-value.ts  use-planowanie-budzetu.ts  use-user-mock.ts
client/app/mocks/: kody-zadaniowe.ts
client/app/modals/: new-budget-document-row-modal.tsx
client/app/queries/: client.ts  czesci-budzetowe.ts  czesci_budzetowe.ts  dzialy.ts  grupy-wydatkow.ts  grupy_wydatkow.ts  (+7 more)
server/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  template.xlsx  zal.docx
server/docs/: wersjonowanie.md
server/src/: auth.py  database.py  document_creator.py  excel_creator.py  load_fixtures.py  main.py  tabela.py  versioning_utils.py
server/src/docs/: wersjonowanie.md
server/src/fixtures/: czesci_budzetowe.json  dzialy.json  grupy_wydatkow.json  komorki_organizacyjne.json  paragrafy.json  planowanie_budzetu.json  rozdzialy.json  users.json  zrodla_finansowania.json
server/src/models/: tabela_models.py
server/src/schemas/: __init__.py  czesci_budzetowe.py  dzialy.py  grupy_wydatkow.py  komorki_organizacyjne.py  paragrafy.py  planowanie_budzetu.py  rok_budzetowy.py  rozdzialy.py  users.py  versioned_fields.py  zrodla_finansowania.py
server/tests/: conftest.py  test_autoryzacja.py  test_tabela.py
(+6 files in other folders)
