[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docxtpl>=0.20.2",
    "fastapi[standard]>=0.124.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
